--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="main.css" />
-    <title>Giftee</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="main.css" />
+  <title>Giftee</title>
+</head>
+
+<body>
+
+
+  <footer>
+    <div id="#contact">
+      <h3>Contact</h3>
+      <div class="color-bar">
+        <div class="purple"></div>
+        <div class="turquoise"></div>
+        <div class="yellow"></div>
+        <div class="pink"></div>
+        <div class="red"></div>
+      </div>
+      <p>Lygten 37 - 2400 - KBH NV </p>
+      <p>+45 53535353</p>
+      <p>customerservice@giftee.com</p>
+    </div>
+
+    <div id="#about">
+      <h3>About us</h3>
+      <div class="color-bar">
+        <div class="purple"></div>
+        <div class="turquoise"></div>
+        <div class="yellow"></div>
+        <div class="pink"></div>
+        <div class="red"></div>
+      </div>
+      <p>How does it work?</p>
+      <p>Delivery information</p>
+      <p>FAQs</p>
+      <p>Privacy and Policy</p>
+    </div>
+
+    <div id="#follow">
+      <h3>Follow us:</h3>
+      <div class="color-bar">
+        <div class="purple"></div>
+        <div class="turquoise"></div>
+        <div class="yellow"></div>
+        <div class="pink"></div>
+        <div class="red"></div>
+      </div>
+      <div class="icons">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+      </div>
+    </div>
+
+  </footer>
+
+  <script src="https://kit.fontawesome.com/5aed494ed7.js" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
