--- a/index.html
+++ b/index.html
@@ -5,7 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&family=Rancho&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/714c24be39.js" crossorigin="anonymous"></script>
     <title>Giftee</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="color-bar">
+        <div class="purple"></div>
+        <div class="turquoise"></div>
+        <div class="yellow"></div>
+        <div class="pink"></div>
+        <div class="red"></div>
+        <div class="black"></div>
+      </div>
+      <nav>
+        <ul>
+          <li class="logo"><a href="#">Giftee</a></li>
+          <li class="icons">
+            <div>
+              <a href="#" class="fas fa-user"></a>
+              <p>sign in</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <p>cart</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-heart"></a>
+              <p>wishlist</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-gift"></a>
+              <p>gift finder</p>
+            </div>
+            <!-- <a href="#" class="fas fa-user"></a>
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-gift"></a> -->
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
