--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </ul>
       </nav>
     </header>
+    <button>teeest</button>
     <footer>
       <div id="#contact">
         <h3>Contact</h3>
@@ -73,7 +74,7 @@
         <p>FAQs</p>
         <p>Privacy and Policy</p>
       </div>
-      
+
       <div id="#follow">
         <h3>Follow us:</h3>
         <div class="color-bar">
