Home page search bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/search_home.css" />
     <title>Giftee</title>
   </head>
   <body>
@@ -44,7 +45,29 @@
         </ul>
       </nav>
     </header>
-    <button>teeest</button>
+
+    <section id="content">
+<div class="search-bar">
+    <form action="">
+      <input type="search" placeholder="Search for something ...">
+    </form>
+  </div>
+  <div class="search-tags">
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+    <button>something</button>
+  </div>
+
+    </section>
+
     <footer>
       <div id="#contact">
         <h3>Contact</h3>
