--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -10,129 +9,129 @@
     <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
     <title>Giftee</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="color-bar">
-            <div class="purple"></div>
-            <div class="turquoise"></div>
-            <div class="yellow"></div>
-            <div class="pink"></div>
-            <div class="red"></div>
-            <div class="black"></div>
-        </div>
-        <nav>
-            <ul>
-                <li class="logo"><a href="#">Giftee</a></li>
-                <li class="icons">
-                    <div>
-                        <a href="#" class="fas fa-user"></a>
-                        <p>sign in</p>
-                    </div>
-                    <div>
-                        <a href="#" class="fas fa-shopping-cart"></a>
-                        <p>cart</p>
-                    </div>
-                    <div>
-                        <a href="#" class="fas fa-heart"></a>
-                        <p>wishlist</p>
-                    </div>
-                    <div>
-                        <a href="#" class="fas fa-gift"></a>
-                        <p>gift finder</p>
-                    </div>
-                </li>
-            </ul>
-        </nav>
+      <div class="color-bar">
+        <div class="purple"></div>
+        <div class="turquoise"></div>
+        <div class="yellow"></div>
+        <div class="pink"></div>
+        <div class="red"></div>
+        <div class="black"></div>
+      </div>
+      <nav>
+        <ul>
+          <li class="logo"><a href="#">Giftee</a></li>
+          <li class="icons">
+            <div>
+              <a href="#" class="fas fa-user"></a>
+              <p>sign in</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <p>cart</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-heart"></a>
+              <p>wishlist</p>
+            </div>
+            <div>
+              <a href="#" class="fas fa-gift"></a>
+              <p>gift finder</p>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    <div id="about_wrapper">
-
-        <h2>We have made it <span>simple</span> for you to find something special and unique for someone you care about
+    <main>
+      <section class="about-grid">
+        <h2 class="about-h2">
+          We have made it <span>simple</span> for you to find something special and unique for someone you care about
         </h2>
 
         <div id="about_top">
-            <img src="presents.jpg" alt="" srcset="">
-            <div>
-                <h3>Our story</h3>
-                <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-                    est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
-                    modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                    veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
-                    commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
-                    molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-                </p>
-            </div>
+          <img src="presents.jpg" alt="" srcset="" />
+          <div>
+            <h3>Our story</h3>
+            <p>
+              "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
+              enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+              ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+              adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
+              voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+              aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+              molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+            </p>
+          </div>
         </div>
         <div id="about_bottom">
-            <div>
-                <h3>Support Local Businesses</h3>
-                <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-                    est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
-                    modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                    veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
-                    commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
-                    molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-                </p>
-            </div>
-            <img src="local.jpg" alt="" srcset="">
-
+          <div>
+            <h3>Support Local Businesses</h3>
+            <p>
+              "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
+              enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+              ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+              adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
+              voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+              aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+              molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+            </p>
+          </div>
+          <img src="local.jpg" alt="" srcset="" />
         </div>
-    </div>
+      </section>
+    </main>
 
     <footer>
-        <div id="#contact">
-            <h3>Contact</h3>
-            <div class="color-bar">
-                <div class="purple"></div>
-                <div class="turquoise"></div>
-                <div class="yellow"></div>
-                <div class="pink"></div>
-                <div class="red"></div>
-            </div>
-            <p>Lygten 37 - 2400 - KBH NV</p>
-            <p>+45 53535353</p>
-            <p>customerservice@giftee.com</p>
+      <div id="#contact">
+        <h3>Contact</h3>
+        <div class="color-bar">
+          <div class="purple"></div>
+          <div class="turquoise"></div>
+          <div class="yellow"></div>
+          <div class="pink"></div>
+          <div class="red"></div>
         </div>
+        <p>Lygten 37 - 2400 - KBH NV</p>
+        <p>+45 53535353</p>
+        <p>customerservice@giftee.com</p>
+      </div>
 
-        <div id="#about">
-            <h3>About us</h3>
-            <div class="color-bar">
-                <div class="purple"></div>
-                <div class="turquoise"></div>
-                <div class="yellow"></div>
-                <div class="pink"></div>
-                <div class="red"></div>
-            </div>
-            <p>How does it work?</p>
-            <p>Delivery information</p>
-            <p>FAQs</p>
-            <p>Privacy and Policy</p>
+      <div id="#about">
+        <h3>About us</h3>
+        <div class="color-bar">
+          <div class="purple"></div>
+          <div class="turquoise"></div>
+          <div class="yellow"></div>
+          <div class="pink"></div>
+          <div class="red"></div>
         </div>
+        <p>How does it work?</p>
+        <p>Delivery information</p>
+        <p>FAQs</p>
+        <p>Privacy and Policy</p>
+      </div>
 
-        <div id="#follow">
-            <h3>Follow us:</h3>
-            <div class="color-bar">
-                <div class="purple"></div>
-                <div class="turquoise"></div>
-                <div class="yellow"></div>
-                <div class="pink"></div>
-                <div class="red"></div>
-            </div>
-            <div class="icons">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-twitter-square"></i>
-            </div>
+      <div id="#follow">
+        <h3>Follow us:</h3>
+        <div class="color-bar">
+          <div class="purple"></div>
+          <div class="turquoise"></div>
+          <div class="yellow"></div>
+          <div class="pink"></div>
+          <div class="red"></div>
         </div>
+        <div class="icons">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-twitter-square"></i>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
