--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
       <div id="search-container">
 <div class="search-bar">
   <form name="search">
+    <div id="search-input-tags">
+    </div>
     <input type="text" class="search-input" autocorrect="off" autocomplete="off" />
     <div class="search-label hidden"></div>
   </form>
   </div>
   <div class="search-tags">
-    <button>something</button>
+    <button onclick="addTagsToSearch()">something</button>
     <button>something</button>
     <button>something</button>
     <button>something</button>
@@ -68,7 +70,6 @@
     <button>something</button>
   </div>
 </div>
-
     </section>
 
     <footer>
