--- a/product-page-1.html
+++ b/product-page-1.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/5aed494ed7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
-    <title>Product Number 1</title>
+    <title>Product1 Number 1</title>
   </head>
   <body>
     <header>
@@ -48,80 +48,51 @@
         </ul>
       </nav>
     </header>
-    <main id="products">
-      <div class="product-grid">
+    <main id="product1s">
+      <div class="product1-grid">
         <div ></div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name"><h3>Reclaimed Wood USA Wall Art</h3></div>
-          <div class="product-price">250 DKK</div>
+        <div class="product1">
+          <i class="fas product1-wish fa-heart"></i>
+          <img src="https://source.unsplash.com/random" alt="product1_image" />
+          <div class="product1-name"><h3>Reclaimed Wood USA Wall Art</h3></div>
+          <div class="product1-price">250 DKK</div>
           <div class="rating"></div>
         </div>
         <div></div>
-        <div class="product-info-container">
-          <div class="product-info-tittle"><h1>Product Name</h1></div>
-          <div class="product-info-description">
+        <div class="product1-info-container">
+          <div class="product1-info-tittle"><h1>Product1 Name</h1></div>
+          <div class="product1-info-description">a
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, dignissimos soluta perspiciatis officia quia sit
             corrupti Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint adipisci nisi nemo sequi quaerat fugiat debitis
             labore aut amet Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur deleniti recusandae voluptatem,
             accusamus, ipsam at odit expedita provident quasi vero adipisci itaque corrupti voluptas numquam ad cupiditate minima.
             Quasi, itaque.
           </div>
-          <div class="product-info-review">
-            <div class="product-star">
+          <div class="product1-info-review">
+            <div class="product1-star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-<<<<<<< HEAD
-            <div class='product-info-quantity'> 
-                    <div> Quantity: </div>
-                        <div class="input-group">
-                          <div class="input-group-btn">
-                              <button id="down" class="btn btn-default" onclick=" down('0')"><i class="fas fa-minus"></i></button>
-                          </div>
-                          <div> <input type="text"  id="myNumber"  value="1" /></div>
-                          <div class="input-group-btn">
-                              <button id="up" class="btn btn-default" onclick="up('10')"><i class="fas fa-plus"></i></button>
-                          </div>
-                      </div>
-                      
-=======
-
-            <span> (22 Reviews)</span>
-            <div></div>
+            <span> (23 Reviews)</span>
           </div>
-          <div class="product-info-quantity">
-            <div>Quantity</div>
-            <div class="dropdown-age">
-              <div class="age">0</div>
-
-              <svg class="dropdown-age-arrow" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
-              </svg>
-
-              <form class="form-age-checkboxes">
-                <label> <input type="checkbox" />1 </label>
-                <label> <input type="checkbox" /> 2 </label>
-                <label> <input type="checkbox" /> 3 </label>
-                <label> <input type="checkbox" /> 4 </label>
-                <label> <input type="checkbox" /> 5 </label>
-                <label> <input type="checkbox" /> 6 </label>
-                <label> <input type="checkbox" /> 7</label>
-                <label> <input type="checkbox" /> 8</label>
-                <label> <input type="checkbox" /> 9</label>
-              </form>
->>>>>>> 66d0de9ec81214ed9d34a020f73811f2b1cb36d8
-            </div>
-          </div>
-          <div class="product-button-add"><button>Add to Cart</button></div>
+          <div class='product1-info-quantity'> 
+            <div> Quantity: </div>
+                <div class="input-group">
+                  <div class="input-group-btn">
+                      <button id="down" class="btn btn-default" onclick=" down('0')"><i class="fas fa-minus"></i></button>
+                  </div>
+                  <div> <input type="text"  id="myNumber"  value="1" /></div>
+                  <div class="input-group-btn">
+                      <button id="up" class="btn btn-default" onclick="up('10')"><i class="fas fa-plus"></i></button>
+                  </div>
+              </div>
+              
+    </div>
+          <div class="product1-button-add"><button>Add to Cart</button></div>
         </div>
-<<<<<<< HEAD
         <div></div>
-=======
->>>>>>> 66d0de9ec81214ed9d34a020f73811f2b1cb36d8
       </div>
     </main>
 
