search bar tags v2

--- a/index.html
+++ b/index.html
@@ -53,24 +53,28 @@
     <section id="content">
       <div id="search-container">
         <div class="search-bar">
-          <form name="search">
+          <form name="search" onsubmit="return false">
             <div id="search-input-tags"></div>
             <input type="text" class="search-input" autocorrect="off" autocomplete="off" />
             <div class="search-label hidden"></div>
           </form>
         </div>
         <div class="search-tags">
-          <button onclick="addTagsToSearch()">something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
-          <button>something</button>
+          <button onclick="addTagsToSearch()">Education</button>
+          <button onclick="addTagsToSearch()">Girlfriend</button>
+          <button onclick="addTagsToSearch()">Boys</button>
+          <button onclick="addTagsToSearch()">Wedding</button>
+          <button onclick="addTagsToSearch()">Birthday</button>
+          <button onclick="addTagsToSearch()">Education</button>
+          <button onclick="addTagsToSearch()">Girlfriend</button>
+          <button onclick="addTagsToSearch()">Boys</button>
+          <button onclick="addTagsToSearch()">Wedding</button>
+          <button onclick="addTagsToSearch()">Birthday</button>
+          <button onclick="addTagsToSearch()">Birthday</button>
+          <button onclick="addTagsToSearch()">Education</button>
+          <button onclick="addTagsToSearch()">Girlfriend</button>
+          <button onclick="addTagsToSearch()">Boys</button>
+          <button onclick="addTagsToSearch()">Wedding</button>
         </div>
       </div>
     </section>
