--- a/login.html
+++ b/login.html
@@ -23,24 +23,28 @@
       </div>
       <nav>
         <ul>
-          <li class="logo"><a href="#">Giftee</a></li>
+          <li class="logo"><a href="index.html">Giftee</a></li>
           <li class="icons">
-            <div>
-              <a href="#" class="fas fa-user"></a>
+            <a href="#">
+              <i class="fas fa-user"></i>
               <p>sign in</p>
-            </div>
-            <div>
-              <a href="#" class="fas fa-shopping-cart"></a>
+            </a>
+            <a href="#">
+              <i class="fas fa-shopping-cart"></i>
               <p>cart</p>
-            </div>
-            <div>
-              <a href="#" class="fas fa-heart"></a>
+            </a>
+            <a href="#">
+              <i class="fas fa-heart"></i>
               <p>wishlist</p>
-            </div>
-            <div>
-              <a href="#" class="fas fa-gift"></a>
+            </a>
+            <a href="index.html">
+              <i class="fas fa-gift"></i>
               <p>gift finder</p>
-            </div>
+            </a>
+            <a href="about.html">
+              <i class="fas fa-info-circle"></i>
+              <p>about</p>
+            </a>
           </li>
         </ul>
       </nav>
