cart page desktop and mobile added.

--- a/wishlist.html
+++ b/wishlist.html
@@ -26,15 +26,15 @@
                   <ul>
                     <li class="logo"><a href="index.html">Giftee</a></li>
                     <li class="icons">
-                      <a href="#">
+                      <a href="login.html">
                         <i class="fas fa-user"></i>
                         <p>sign in</p>
                       </a>
-                      <a href="#">
+                      <a href="cart.html">
                         <i class="fas fa-shopping-cart"></i>
                         <p>cart</p>
                       </a>
-                      <a href="#">
+                      <a href="wishlist.html">
                         <i class="fas fa-heart"></i>
                         <p>wishlist</p>
                       </a>
