search bar with link

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     </header>
 
     <section id="content">
+      <!-- <h2>What to give? Here's how to find out.</h2> -->
       <div id="search-container">
         <div class="search-bar">
           <form name="search" onsubmit="return false">
             <div id="search-input-tags"></div>
-            <input type="text" class="search-input" autocorrect="off" autocomplete="off" />
+            <input type="text" class="search-input" autocorrect="off" autocomplete="off" placeholder="Search for the perfect gift ..." />
+            <i onclick="location.href='/product-page.html';" class="fas fa-search"></i>
             <div class="search-label hidden"></div>
           </form>
         </div>
