link to product

--- a/product-page.html
+++ b/product-page.html
@@ -101,63 +101,63 @@
         </div>
       </div>
       <div class="products-grid">
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
           <div class="product-price">250 DKK</div>
           <div class="rating"></div>
         </div>
-        <div class="product">
+        <div class="product" onclick="location.href='/product-page-1.html';">
           <i class="fas product-wish fa-heart"></i>
           <img src="https://source.unsplash.com/random" alt="product_image" />
           <div class="product-name">Reclaimed Wood USA Wall Art</div>
