changed products heart

--- a/product-page.html
+++ b/product-page.html
@@ -101,68 +101,104 @@
         </div>
       </div>
       <div class="products-grid">
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
-        <div class="product" onclick="location.href='/product-page-1.html';">
+        <div class="product">
           <i class="fas product-wish fa-heart"></i>
-          <img src="https://source.unsplash.com/random" alt="product_image" />
-          <div class="product-name">Reclaimed Wood USA Wall Art</div>
-          <div class="product-price">250 DKK</div>
-          <div class="rating"></div>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
+        </div>
+        <div class="product">
+          <i class="fas product-wish fa-heart"></i>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
+        </div>
+        <div class="product">
+          <i class="fas product-wish fa-heart"></i>
+          <div class="product-info" onclick="location.href='/product-page-1.html';">
+            <img src="https://source.unsplash.com/random" alt="product_image" />
+            <div class="product-name">Reclaimed Wood USA Wall Art</div>
+            <div class="product-price">250 DKK</div>
+            <div class="rating"></div>
+          </div>
         </div>
       </div>
     </main>
@@ -244,6 +280,12 @@
         heart.addEventListener("click", () => {
           let heartIcon = event.target;
           heartIcon.classList.toggle("hearted");
+
+          // let wishlistIcon = document.querySelector("nav .fa-heart");
+          // wishlistIcon.getBoundingClientRect();
+          // heartIcon.getBoundingClientRect();
+
+          // heartIcon.style.transform = `translate(${wishlistIcon.x - heartIcon.x}px, ${wishlistIcon.y - heartIcon.y})`;
         });
       });
 
