--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <section id="content">
       <!-- <h2>What to give? Here's how to find out.</h2> -->
+      <div class="full-height">
       <div id="search-container">
         <div class="search-bar">
           <form name="search" onsubmit="return false">
@@ -79,54 +80,8 @@
           <button onclick="addTagsToSearch()">Wedding</button>
         </div>
       </div>
+    </div>
     </section>
-
-    <footer>
-      <div id="#contact">
-        <h3>Contact</h3>
-        <div class="color-bar">
-          <div class="purple"></div>
-          <div class="turquoise"></div>
-          <div class="yellow"></div>
-          <div class="pink"></div>
-          <div class="red"></div>
-        </div>
-        <p>Lygten 37 - 2400 - KBH NV</p>
-        <p>+45 53535353</p>
-        <p>customerservice@giftee.com</p>
-      </div>
-
-      <div id="#about">
-        <h3>FAQ</h3>
-        <div class="color-bar">
-          <div class="purple"></div>
-          <div class="turquoise"></div>
-          <div class="yellow"></div>
-          <div class="pink"></div>
-          <div class="red"></div>
-        </div>
-        <p>How does it work?</p>
-        <p>Delivery information</p>
-        <p>Privacy and Policy</p>
-      </div>
-
-      <div id="#follow">
-        <h3>Follow us:</h3>
-        <div class="color-bar">
-          <div class="purple"></div>
-          <div class="turquoise"></div>
-          <div class="yellow"></div>
-          <div class="pink"></div>
-          <div class="red"></div>
-        </div>
-        <div class="icons">
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-twitter-square"></i>
-        </div>
-      </div>
-    </footer>
-
     <script src="app.js"></script>
   </body>
 </html>
