fixed footer responsive

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-      <div id="#contact">
+      <div id="contact">
         <h3>Contact</h3>
         <div class="color-bar">
           <div class="purple"></div>
@@ -101,12 +101,14 @@
           <div class="pink"></div>
           <div class="red"></div>
         </div>
-        <p>Lygten 37 - 2400 - KBH NV</p>
-        <p>+45 53535353</p>
-        <p>customerservice@giftee.com</p>
+        <div class="footer-links">
+          <p>Lygten 37 - 2400 - KBH NV</p>
+          <p>+45 53535353</p>
+          <p>customerservice@giftee.com</p>
+        </div>
       </div>
 
-      <div id="#about">
+      <div id="about">
         <h3>About us</h3>
         <div class="color-bar">
           <div class="purple"></div>
@@ -121,7 +123,7 @@
         <p>Privacy and Policy</p>
       </div>
 
-      <div id="#follow">
+      <div id="follow">
         <h3>Follow us:</h3>
         <div class="color-bar">
           <div class="purple"></div>
