--- a/product-page.html
+++ b/product-page.html
@@ -203,7 +203,7 @@
       </div>
     </main>
     <footer>
-      <div id="#contact">
+      <div id="contact">
         <h3>Contact</h3>
         <div class="color-bar">
           <div class="purple"></div>
@@ -217,7 +217,7 @@
         <p>customerservice@giftee.com</p>
       </div>
 
-      <div id="#about">
+      <div id="about">
         <h3>About us</h3>
         <div class="color-bar">
           <div class="purple"></div>
@@ -232,7 +232,7 @@
         <p>Privacy and Policy</p>
       </div>
 
-      <div id="#follow">
+      <div id="follow">
         <h3>Follow us:</h3>
         <div class="color-bar">
           <div class="purple"></div>
