--- a/wishlist.html
+++ b/wishlist.html
@@ -99,7 +99,7 @@
         </div>
     </main>
     <footer>
-        <div id="#contact">
+        <div id="contact">
             <h3>Contact</h3>
             <div class="color-bar">
                 <div class="purple"></div>
@@ -113,7 +113,7 @@
             <p>customerservice@giftee.com</p>
         </div>
 
-        <div id="#about">
+        <div id="about">
             <h3>About us</h3>
             <div class="color-bar">
                 <div class="purple"></div>
@@ -128,7 +128,7 @@
             <p>Privacy and Policy</p>
         </div>
 
-        <div id="#follow">
+        <div id="follow">
             <h3>Follow us:</h3>
             <div class="color-bar">
                 <div class="purple"></div>
