--- a/product-page.html
+++ b/product-page.html
@@ -101,105 +101,17 @@
         </div>
       </div>
       <div class="products-grid">
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
+        <template data-template="product">
+          <div class="product">
+            <i class="fas product-wish fa-heart"></i>
+            <div class="product-info" onclick="location.href='/product-page-1.html';">
+              <img data-product="image" src="" alt="product_image" />
+              <div data-product="title" class="product-name"></div>
+              <div data-product="price" class="product-price"></div>
+              <div data-product="rating" class="rating"></div>
+            </div>
           </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
-        <div class="product">
-          <i class="fas product-wish fa-heart"></i>
-          <div class="product-info" onclick="location.href='/product-page-1.html';">
-            <img src="https://source.unsplash.com/random" alt="product_image" />
-            <div class="product-name">Reclaimed Wood USA Wall Art</div>
-            <div class="product-price">250 DKK</div>
-            <div class="rating"></div>
-          </div>
-        </div>
+        </template>
       </div>
     </main>
     <footer>
@@ -337,6 +249,24 @@
 
       inputLeft.addEventListener("input", setLeftValue);
       inputRight.addEventListener("input", setRightValue);
+
+// The products from json
+async function getProducts() {
+     let myJson = await fetch("products.json");
+     aProducts = await myJson.json();
+
+     let temp = document.querySelector("[data-template]");
+     let dest = document.querySelector('.products-grid');
+     aProducts.forEach(product => {
+            let clone = temp.cloneNode(true).content;
+             clone.querySelector('[data-product="image"]').src = product.image;
+             clone.querySelector('[data-product="title"]').textContent = product.title;
+             clone.querySelector('[data-product="price"]').textContent = product.price + " DKK";
+             dest.appendChild(clone);
+     })
+ }
+
+ getProducts();
     </script>
   </body>
 </html>
